refactor: review 관련 레포지토리-서비스-컨트롤러 대규모 리팩터링