@@ -1,49 +1,42 @@
 package goormthonuniv.kengdori.backend.dto.review;
 
-import goormthonuniv.kengdori.backend.domain.place.Place;
+import goormthonuniv.kengdori.backend.domain.place.PlaceMainTag;
 import goormthonuniv.kengdori.backend.domain.review.Review;
-import goormthonuniv.kengdori.backend.dto.hashtag.HashtagInfoDTO;
+import goormthonuniv.kengdori.backend.domain.review.ReviewHashtag;
+import goormthonuniv.kengdori.backend.dto.hashtag.UserHashtagDTO;
 import lombok.Getter;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 public class ReviewDetailsResponseDTO {
-
-    private final Long placeId;
     private final Long reviewId;
+    private final Long placeId;
     private final String placeName;
     private final Double rating;
-    private final HashtagInfoDTO mainTag;
-    private final List<HashtagInfoDTO> subTags;
-    private final String imageUrl;
     private final String memo;
+    private final String imageUrl;
     private final LocalDateTime createdAt;
 
+    private final UserHashtagDTO mainTag;
+    private final List<UserHashtagDTO> subTags;
 
-    public ReviewDetailsResponseDTO(Review review) {
-        Place place = review.getPlace();
-        List<PlaceHashtag> placeHashtags = place.getPlaceHashtagList();
-
-        this.placeId = place.getId();
+    public ReviewDetailsResponseDTO(Review review, PlaceMainTag mainTag, List<ReviewHashtag> subTags) {
         this.reviewId = review.getId();
-        this.placeName = place.getName();
+        this.placeId = review.getPlace().getId();
+        this.placeName = review.getPlace().getName();
         this.rating = review.getRating();
-        this.imageUrl = review.getImageUrl();
         this.memo = review.getMemo();
+        this.imageUrl = review.getImageUrl();
         this.createdAt = review.getCreatedAt();
 
-        this.mainTag = placeHashtags.stream()
-                .filter(PlaceHashtag::getIsMain)
-                .map(ph -> new HashtagInfoDTO(ph.getUserHashtag()))
-                .findFirst()
-                .orElse(null);
+        this.mainTag = (mainTag != null)
+                ? new UserHashtagDTO(mainTag.getUserHashtag())
+                : null;
 
-        this.subTags = placeHashtags.stream()
-                .filter(ph -> !ph.getIsMain())
-                .map(ph -> new HashtagInfoDTO(ph.getUserHashtag()))
-                .collect(Collectors.toList());
+        this.subTags = subTags.stream()
+                .map(rh -> new UserHashtagDTO(rh.getUserHashtag()))
+                .toList();
     }
 }
